tests/rosetta/out/Rust/carmichael-3-strong-pseudoprimes.error
rustc: exit status 1
error: expected identifier, found keyword `mod`
 --> /tmp/carmichael-3-strong-pseudoprimes.rs:3:8
  |
3 |     fn mod(n: i32, m: i32) -> i32 {
  |        ^^^ expected identifier, found keyword
  |
help: escape `mod` to use it as an identifier
  |
3 |     fn r#mod(n: i32, m: i32) -> i32 {
  |        ++

error: `<` is interpreted as a start of generic arguments for `i32`, not a comparison
  --> /tmp/carmichael-3-strong-pseudoprimes.rs:31:30
   |
31 |         while s.len() as i32 < width {
   |                              ^ ------- interpreted as generic arguments
   |                              |
   |                              not interpreted as comparison
   |
help: try comparing the cast value
   |
31 |         while (s.len() as i32) < width {
   |               +              +

error: expected expression, found keyword `mod`
  --> /tmp/carmichael-3-strong-pseudoprimes.rs:39:55
   |
39 |                 if ((h3 + p1) * (p1 - 1)) % d == 0 && mod(-p1 * p1, h3) == d % h3 {
   |                                                       ^^^ expected expression

error[E0308]: mismatched types
  --> /tmp/carmichael-3-strong-pseudoprimes.rs:34:16
   |
29 |     fn pad(n: i32, width: i32) -> &'static str {
   |                                   ------------ expected `&'static str` because of return type
...
34 |         return s;
   |                ^ expected `&str`, found `String`
   |
help: consider borrowing here
   |
34 |         return &s;
   |                +

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0308`.
